include/codata_constants_2022.h

ADD_IMPORT extern const struct codata_constant_type ELECTRON_TO_SHIELDED_PROTON_MAG_MOM_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_TRITON_MASS_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_HARTREE_RELATIONSHIP;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_HERTZ_RELATIONSHIP;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_JOULE_RELATIONSHIP;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_KELVIN_RELATIONSHIP;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_VOLT_KILOGRAM_RELATIONSHIP;
ADD_IMPORT extern const struct codata_constant_type ELEMENTARY_CHARGE;
ADD_IMPORT extern const struct codata_constant_type ELEMENTARY_CHARGE_OVER_H_BAR;
ADD_IMPORT extern const struct codata_constant_type FARADAY_CONSTANT;
ADD_IMPORT extern const struct codata_constant_type FERMI_COUPLING_CONSTANT;
ADD_IMPORT extern const struct codata_constant_type FINE_STRUCTURE_CONSTANT;
ADD_IMPORT extern const struct codata_constant_type FIRST_RADIATION_CONSTANT;