src/codata_constants_2022_capi.f90


type(capi_constant_type), protected, public, bind(C, name="ELECTRON_TO_SHIELDED_PROTON_MAG_MOM_RATIO") ::&
capi_110 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "t", &
"o", " ", "s", "h", "i", "e", "l", "d", "e", "d", &
" ", "p", "r", "o", "t", "o", "n", " ", "m", "a", &
"g", ".", " ", "m", "o", "m", ".", " ", "r", "a", &
"t", "i", "o", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_TO_SHIELDED_PROTON_MAG_MOM_RATIO%value, &
ELECTRON_TO_SHIELDED_PROTON_MAG_MOM_RATIO%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_TRITON_MASS_RATIO") ::&
capi_111 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "t", &
"r", "i", "t", "o", "n", " ", "m", "a", "s", "s", &
" ", "r", "a", "t", "i", "o", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_TRITON_MASS_RATIO%value, &
ELECTRON_TRITON_MASS_RATIO%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT") ::&
capi_112 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT%value, &
ELECTRON_VOLT%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP") ::&
capi_113 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "a", "t", "o", "m", "i", "c", &
" ", "m", "a", "s", "s", " ", "u", "n", "i", "t", &
" ", "r", "e", "l", "a", "t", "i", "o", "n", "s", &
"h", "i", "p", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP%value, &
ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP%uncertainty, &
[ &
"u", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_HARTREE_RELATIONSHIP") ::&
capi_114 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "h", "a", "r", "t", "r", "e", &
"e", " ", "r", "e", "l", "a", "t", "i", "o", "n", &
"s", "h", "i", "p", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_HARTREE_RELATIONSHIP%value, &
ELECTRON_VOLT_HARTREE_RELATIONSHIP%uncertainty, &
[ &
"E", "_", "h", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_HERTZ_RELATIONSHIP") ::&
capi_115 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "h", "e", "r", "t", "z", " ", &
"r", "e", "l", "a", "t", "i", "o", "n", "s", "h", &
"i", "p", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_HERTZ_RELATIONSHIP%value, &
ELECTRON_VOLT_HERTZ_RELATIONSHIP%uncertainty, &
[ &
"H", "z", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP") ::&
capi_116 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "i", "n", "v", "e", "r", "s", &
"e", " ", "m", "e", "t", "e", "r", " ", "r", "e", &
"l", "a", "t", "i", "o", "n", "s", "h", "i", "p", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP%value, &
ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP%uncertainty, &
[ &
"m", "^", "-", "1", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_JOULE_RELATIONSHIP") ::&
capi_117 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "j", "o", "u", "l", "e", " ", &
"r", "e", "l", "a", "t", "i", "o", "n", "s", "h", &
"i", "p", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_JOULE_RELATIONSHIP%value, &
ELECTRON_VOLT_JOULE_RELATIONSHIP%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_KELVIN_RELATIONSHIP") ::&
capi_118 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "k", "e", "l", "v", "i", "n", &
" ", "r", "e", "l", "a", "t", "i", "o", "n", "s", &
"h", "i", "p", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_KELVIN_RELATIONSHIP%value, &
ELECTRON_VOLT_KELVIN_RELATIONSHIP%uncertainty, &
[ &
"K", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_KILOGRAM_RELATIONSHIP") ::&
capi_119 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "k", "i", "l", "o", "g", "r", &
"a", "m", " ", "r", "e", "l", "a", "t", "i", "o", &
"n", "s", "h", "i", "p", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_KILOGRAM_RELATIONSHIP%value, &
ELECTRON_VOLT_KILOGRAM_RELATIONSHIP%uncertainty, &
[ &
"k", "g", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELEMENTARY_CHARGE") ::&
capi_120 = capi_constant_type([ &
"e", "l", "e", "m", "e", "n", "t", "a", "r", "y", &
" ", "c", "h", "a", "r", "g", "e", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELEMENTARY_CHARGE%value, &
ELEMENTARY_CHARGE%uncertainty, &
[ &
"C", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELEMENTARY_CHARGE_OVER_H_BAR") ::&
capi_121 = capi_constant_type([ &
"e", "l", "e", "m", "e", "n", "t", "a", "r", "y", &
" ", "c", "h", "a", "r", "g", "e", " ", "o", "v", &
"e", "r", " ", "h", "-", "b", "a", "r", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELEMENTARY_CHARGE_OVER_H_BAR%value, &
ELEMENTARY_CHARGE_OVER_H_BAR%uncertainty, &
[ &
"A", " ", "J", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="FARADAY_CONSTANT") ::&
capi_122 = capi_constant_type([ &
"F", "a", "r", "a", "d", "a", "y", " ", "c", "o", &
"n", "s", "t", "a", "n", "t", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
FARADAY_CONSTANT%value, &
FARADAY_CONSTANT%uncertainty, &
[ &
"C", " ", "m", "o", "l", "^", "-", "1", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="FERMI_COUPLING_CONSTANT") ::&
capi_123 = capi_constant_type([ &
"F", "e", "r", "m", "i", " ", "c", "o", "u", "p", &
"l", "i", "n", "g", " ", "c", "o", "n", "s", "t", &
"a", "n", "t", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
FERMI_COUPLING_CONSTANT%value, &
FERMI_COUPLING_CONSTANT%uncertainty, &
[ &
"G", "e", "V", "^", "-", "2", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="FINE_STRUCTURE_CONSTANT") ::&
capi_124 = capi_constant_type([ &
"f", "i", "n", "e", "-", "s", "t", "r", "u", "c", &
"t", "u", "r", "e", " ", "c", "o", "n", "s", "t", &
"a", "n", "t", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
FINE_STRUCTURE_CONSTANT%value, &
FINE_STRUCTURE_CONSTANT%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="FIRST_RADIATION_CONSTANT") ::&
capi_125 = capi_constant_type([ &
"f", "i", "r", "s", "t", " ", "r", "a", "d", "i", &
"a", "t", "i", "o", "n", " ", "c", "o", "n", "s", &
"t", "a", "n", "t", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
FIRST_RADIATION_CONSTANT%value, &
FIRST_RADIATION_CONSTANT%uncertainty, &
[ &
"W", " ", "m", "^", "2", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
